Fixed paragraph spacing

--- a/style.css
+++ b/style.css
@@ -321,8 +321,8 @@ a:hover {
 }
 
 p {
-	margin-bottom: 5px;
-	margin-top: 5px;
+	margin-bottom: 10px;
+	margin-top: 10px;
 }
 
 table {
